Add missing Serial import after Java 21 upgrade